- make sure double-column starts after left and right column, not overlapping

--- a/client/templates/snaxterLayout/snaxterLayout.less
+++ b/client/templates/snaxterLayout/snaxterLayout.less
@@ -152,3 +152,7 @@ div.product-variants .form-control {
   max-width: 300px;
   margin: 5px auto 20px auto;
 }
+
+.double-column {
+  clear: both;
+}
